--- a/asistentepoetico.css
+++ b/asistentepoetico.css
@@ -143,6 +143,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 2vh;
+    
   }
 
   #boton1,
@@ -157,6 +158,13 @@
     text-decoration: none;
     text-align: center;
     font-size: large;
+    cursor: pointer;
+  }
+
+  #boton1:hover,
+  #boton2:hover,
+  #a1:hover{
+    opacity: 0.5;
   }
 
   #boton1,
@@ -589,7 +597,7 @@
 /* Version celulares y tablet */
 @media screen and (max-width: 960px) {
 
-   body {
+  body {
     display: flex;
     flex-direction: column;
     color: white;
@@ -649,11 +657,11 @@
     margin-top: 10px;
   }
 
- 
+
 
   #botones {
     display: flex;
-    flex-direction:row;
+    flex-direction: row;
     width: 40%;
 
     gap: 10px;
@@ -661,8 +669,10 @@
     align-items: center;
   }
 
-  #boton1, #boton2, #a1 {
-   
+  #boton1,
+  #boton2,
+  #a1 {
+
     box-shadow: 3px 3px 3px #000;
     padding: 10px 10px;
     border: 2px solid #6200ea;
@@ -672,22 +682,23 @@
     text-decoration: none;
     text-align: center;
     font-size: small;
-    
+
   }
 
-  #boton1, #boton2{
+  #boton1,
+  #boton2 {
     width: 100px;
     height: 40px;
   }
 
   #a1 {
-    
+
     width: 120px;
     height: 15%;
 
   }
 
-  
+
 
   #versoin {
     display: flex;
