--- a/acercade.css
+++ b/acercade.css
@@ -1,11 +1,11 @@
-
 #cabeceraAcerca {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  background-color: #6200ea;
-  height: 25%;
-  gap: 10px;
+  align-items: center;
+  color: white;
+  max-width: 400px;
+  gap: 20px;
 }
 
 #fotoAcerca {
@@ -21,6 +21,7 @@ img {
   height: 80%;
   padding-left: 10px;
   padding-right: 10px;
+  background-color: black;
 }
 
 
