--- a/acercade.css
+++ b/acercade.css
@@ -1,11 +1,12 @@
 #cabeceraAcerca {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content:center;
   align-items: center;
   color: white;
   max-width: 400px;
   gap: 20px;
+ 
 }
 
 #fotoAcerca {
@@ -22,6 +23,7 @@ img {
   padding-left: 10px;
   padding-right: 10px;
   background-color: black;
+  
 }
 
 
