--- a/index.css
+++ b/index.css
@@ -3,17 +3,15 @@
     --A200: #B2FF59;
     --A400: #76FF03;
     --A700: #64DD17;
-
     --A100R: rgb(204, 255, 144);
     --A200R: #rgb(178, 255, 89, 0.5);
     --A400R: #rgb(118, 255, 3);
     --A700R: #rgb(100, 221, 23);
 
-
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
+    color: var(--colorOscuro3);
+    background-color: var(--backgroundOscuro3);
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -21,39 +19,14 @@
 
 }
 
-
-
-a {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 0.8rem;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
-}
-
-a:hover {
-    border-color: #76FF03;
-}
-
-
-
-
 @media (prefers-color-scheme: light) {
-    :root {
-        color: #213547;
-        background-color: #ffffff;
-    }
-
-    a:hover {
-        color: #747bff;
-    }
-
-    button {
-        background-color: #f9f9f9;
-    }
-
+   
+ :root{
+background-color: var(--backgroundClaro1);
+ }  
+   
+   
 }
+
+
+
