--- a/asistentepoetico.css
+++ b/asistentepoetico.css
@@ -319,11 +319,9 @@ body {
    
   }
 
-  #intext1, #outtex1, #outtex2, #outtex3, #outtex4{
-    ;
-  }
-
-}
+ #titulo1, #titulo2
+ {font-size: 0.8rem;}
+ }
 
 
 /* Estilos por defecto (puede ser modo claro o el que prefieras) */
